added a script include for an alternate case for hashtables

--- a/sprint-two/SpecRunner.html
+++ b/sprint-two/SpecRunner.html
@@ -12,6 +12,8 @@
   <script type="text/javascript" src="src/tree.js"></script>
   <script type="text/javascript" src="src/set.js"></script>
   <script type="text/javascript" src="src/hashTable.js"></script>
+<!--   // <script type="text/javascript" src="src/hashTable-pseudoclassical.js"></script> -->
+
   <script type="text/javascript" src="src/hashTableHelpers.js"></script>
 
   <!-- Extra credit: -->
